<resources>

    <string name="other_name">其他模块</string>

    <string name="other_title">其他</string>
    <string name="other_btn1">弹框演示</string>
    <string name="other_btn2">登录案例演示</string>
    <string name="other_btn3">录音案例演示</string>
    <string name="other_btn4">常见列表效果演示</string>
    <string name="other_btn5">富媒体演示</string>

    <string name="other_login_title">登录案例</string>
    <string name="other_login_username_hint">请输入用户名</string>
    <string name="other_login_pwd_hint">请输入密码</string>
    <string name="other_login_btn">登录</string>
    <string name="other_login_info">登录信息: </string>

    <string name="other_dialog_title">弹框</string>
    <string name="other_dialog_btn1">退出登录演示</string>
    <string name="other_dialog_btn2">更新弹框演示</string>
    <string name="other_dialog_btn3">底部弹框演示</string>

    <string name="other_dialog_update_title">是否升级到1.0版本？</string>
    <string name="other_dialog_update_info">1: 测试111\n2: 测试222\n3: 测试333</string>
    <string name="other_dialog_update_cancel">取消</string>
    <string name="other_dialog_update_update">升级</string>

    <string name="other_dialog_test_info">1: 1111111111111111111111111\n\n
        2: 2222222222222222222222222\n\n
        3: 3333333333333333333333333\n\n
        4: 4444444444444444444444444\n\n
        5: 5555555555555555555555555\n\n
        6: 6666666666666666666666666\n\n
        7: 7777777777777777777777777
    </string>

    <string name="other_audio_title">录音案例</string>
    <string name="other_audio_btn1">开始播放录音</string>
    <string name="other_audio_btn2">停止播放录音</string>
    <string name="other_audio_btn3">录音弹框效果实现</string>

    <string name="other_record_finger_stroke_to_cancel">手指上滑，取消录音</string>
    <string name="other_record_release_finger_to_cancel">松开手指，取消录音</string>
    <string name="other_record_too_short">录音时间太短</string>
    <string name="other_please_start_recording">请您开始录音</string>
    <string name="other_time_hours">00:00:00</string>
    <string name="other_long_press_to_recording">长按录音</string>

    <string name="other_scroll_title">常见列表效果</string>
    <string name="other_scroll_btn1">滑动置顶演示</string>
    <string name="other_scroll_btn2">水平滑动指示器演示</string>
    <string name="other_scroll_topping_title">滑动置顶效果</string>
    <string name="other_scroll_line_title">水平滑动指示器效果</string>

    <string name="other_rich_seat_title">服务设施</string>
    <string name="other_rich_plane_text1">波音777–30ER</string>
    <string name="other_rich_plane_text2">『大型机』</string>
    <string name="other_rich_plane_text3">机龄 5年</string>
    <string name="other_rich_plane_text4">座位数 388</string>
    <string name="other_rich_plane_text5">飞行里程 18888km</string>

</resources>