<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <com.hjc.library_widget.bar.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/other_color"
            app:leftImage="@mipmap/widget_icon_back"
            app:titleColor="@color/base_white"
            app:titleText="@string/other_dialog_title" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{onClickListener}"
            android:text="@string/other_dialog_btn1" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{onClickListener}"
            android:text="@string/other_dialog_btn2" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{onClickListener}"
            android:text="@string/other_dialog_btn3" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_200">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@mipmap/common_img_example" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                android:layout_margin="@dimen/dp_10"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="@dimen/dp_8">

                <com.hjc.library_widget.blur.RealtimeBlurView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:realtimeBlurRadius="@dimen/dp_10"
                    app:realtimeOverlayColor="@color/other_gray_D8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/sp_12"
                    android:text="@string/other_dialog_notice"
                    android:textColor="@color/base_white" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </LinearLayout>

</layout>