<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@mipmap/other_img_bg_update" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/other_shape_bg_update"
            android:orientation="vertical"
            android:padding="@dimen/dp_16">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_dialog_update_title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:id="@+id/tv_update_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/other_dialog_update_info"
                android:textColor="@color/base_black_33"
                android:textSize="@dimen/sp_14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15">

                <Button
                    android:id="@+id/btn_cancel"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_40"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@drawable/other_selector_btn_update"
                    android:gravity="center"
                    android:onClick="@{onClickListener}"
                    android:text="@string/other_dialog_update_cancel"
                    android:textColor="@color/base_white"
                    android:textSize="@dimen/sp_15" />

                <Button
                    android:id="@+id/btn_update"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_40"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_weight="1"
                    android:background="@drawable/other_selector_btn_update"
                    android:gravity="center"
                    android:onClick="@{onClickListener}"
                    android:text="@string/other_dialog_update_update"
                    android:textColor="@color/base_white"
                    android:textSize="@dimen/sp_15" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>