<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/other_shape_bg_dialog_audio"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_recording_tip"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:onClick="@{onClickListener}"
            android:text="@string/other_please_start_recording"
            android:textColor="@color/base_black_33"
            android:textSize="16sp"
            android:visibility="visible" />

        <com.hjc.library_widget.view.WaveView
            android:id="@+id/wave_view"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            app:baselineColor="@color/base_black"
            app:space="10dp"
            app:waveColor="@color/other_red"
            app:waveStokeWidth="4dp" />

        <TextView
            android:id="@+id/tv_record_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/other_time_hours"
            android:textColor="@color/base_black_33"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_start_recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/other_shape_btn_record"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:text="@string/other_long_press_to_recording"
            android:textColor="@color/base_white"
            android:textSize="16sp" />

    </LinearLayout>

</layout>
