<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_show_arrow"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/other_shape_bg_panel_right"
        android:paddingLeft="2dp"
        android:layout_gravity="center_vertical|end"
        android:paddingRight="2dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/other_icon_arrow_left" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_info"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:visibility="invisible"
        android:background="@drawable/other_shape_bg_panel_info"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_hide_arrow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/other_icon_arrow_right" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="25dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_rich_plane_text1"
                android:textColor="@color/base_white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/other_rich_plane_text2"
                android:textColor="@color/base_white"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_rich_plane_text3"
                android:textColor="@color/base_white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/other_rich_plane_text4"
                android:textColor="@color/base_white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/other_rich_plane_text4"
                android:textColor="@color/base_white"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>